// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Content renders classname 1`] = `
<DocumentFragment>
  <div
    class="className"
  />
</DocumentFragment>
`;

exports[`Content renders content 1`] = `
<DocumentFragment>
  <div>
    Content
  </div>
</DocumentFragment>
`;

exports[`Content renders content and classname 1`] = `
<DocumentFragment>
  <div
    class="className"
  >
    Content
  </div>
</DocumentFragment>
`;

exports[`HTMLContent renders classname 1`] = `
<DocumentFragment>
  <div
    class="className"
  />
</DocumentFragment>
`;

exports[`HTMLContent renders content 1`] = `
<DocumentFragment>
  <div>
    [object Object]
  </div>
</DocumentFragment>
`;

exports[`HTMLContent renders content and classname 1`] = `
<DocumentFragment>
  <div
    class="className"
  >
    [object Object]
  </div>
</DocumentFragment>
`;
